Added new chapters for data exchange and order workflow

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -21,6 +21,54 @@ video::331004096[vimeo]
 
 Um die Schnittstelle zu Kaufland.de nutzen zu können, musst du dein Kaufland.de-Benutzerkonto als Händlerkonto registrieren. Rufe dazu auf der link:https://www.Kaufland.de/seller/new/[Kaufland.de-Website^] den Bereich *Mein Konto* auf und gib dort deine Umsatzsteuer-Identifikationsnummer ein.
 
+[#data-exchange]
+== Häufigkeit des Datenaustauschs
+
+Nachdem du {market} in plentymarkets eingerichtet hast, stehen die in <<#data-exchange-market>> beschriebenen automatisierten Abläufe bereit:
+
+[[data-exchange-market]]
+.Häufigkeit des Datenaustauschs
+[cols="1,3a"]
+|===
+|Daten |Intervall
+
+| Preisabgleich
+| stündlich
+
+| Bestandsabgleich
+| stündlich
+
+Die folgenden Felder werden beim Bestandsabgleich exportiert:
+
+*Bestand* +
+*Bearbeitungszeit in Tagen* +
+*Zustand* +
+*Zustandsbeschreibung* +
+*Kaufland Versandgruppen-ID* +
+*Kaufland Lager-ID*
+
+| Artikelexport
+| einmal täglich +
+*_Hinweis:_* Nur Artikel werden exportiert, bei denen die letzte Änderung innerhalb der letzten 26 Stunden vorgenommen wurde.
+
+| Auftragsimport
+| alle 15 Minuten
+
+| Weitere Daten
+| * Export von Aufpreisen für Attributwerte (Variantenartikel)
+* Übertragung des Beschreibungstexts, wie im Tab *Texte* eingegeben
+* Übertragung der technischen Daten, wie in Tabelle 1 gewählt
+* Bilderexport, wie im Tab *Bilder* des Artikels eingestellt
+|===
+
+[#ablauf-bestellung]
+== Ablauf einer Bestellung bei Kaufland
+
+* Deine Artikel werden bei Kaufland gelistet. Der Name deines Unternehmens wird an deinen Artikeln angezeigt.
+* Kund:innen geben eine Bestellung auf Kaufland auf.
+* Kund:innen zahlen an Kaufland.
+* Der Auftrag wird mit Status *[5] Freigabe Versand* in plentymarkets importiert.
+
 [#market-setup]
 == Marktplatz in plentymarkets einrichten
 
@@ -182,46 +230,6 @@ Die plentymarkets Verfügbarkeits-IDs 1-10 entsprechen der im Menü *Einrichtung
 
 | *Angebotsdatei zu Kaufland.de senden*
 |Angebotsdatei zu Kaufland.de übertragen.
-|===
-
-[#data-exchange]
-=== Häufigkeit des Datenaustauschs
-
-Nachdem du {market} in plentymarkets eingerichtet hast, stehen die in <<#data-exchange-market>> beschriebenen automatisierten Abläufe bereit:
-
-[[data-exchange-market]]
-.Häufigkeit des Datenaustauschs
-[cols="1,3a"]
-|===
-|Daten |Intervall
-
-| Preisabgleich
-| stündlich
-
-| Bestandsabgleich
-| stündlich
-
-Die folgenden Felder werden beim Bestandsabgleich exportiert:
-
-*Bestand* +
-*Bearbeitungszeit in Tagen* +
-*Zustand* +
-*Zustandsbeschreibung* +
-*Kaufland Versandgruppen-ID* +
-*Kaufland Lager-ID*
-
-| Artikelexport
-| einmal täglich +
-*_Hinweis:_* Nur Artikel werden exportiert, bei denen die letzte Änderung innerhalb der letzten 26 Stunden vorgenommen wurde.
-
-| Auftragsimport
-| alle 15 Minuten
-
-| Weitere Daten
-| * Export von Aufpreisen für Attributwerte (Variantenartikel)
-* Übertragung des Beschreibungstexts, wie im Tab *Texte* eingegeben
-* Übertragung der technischen Daten, wie in Tabelle 1 gewählt
-* Bilderexport, wie im Tab *Bilder* des Artikels eingestellt
 |===
 
 [#225]
