Changed order import frequency

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -52,7 +52,7 @@ Die folgenden Felder werden beim Bestandsabgleich exportiert:
 *_Hinweis:_* Nur Artikel werden exportiert, bei denen die letzte Änderung innerhalb der letzten 26 Stunden vorgenommen wurde.
 
 | Auftragsimport
-| alle 15 Minuten
+| * immer, wenn ein neuer Auftrag auf Kaufland generiert wurde
 
 | Weitere Daten
 | * Export von Aufpreisen für Attributwerte (Variantenartikel)
