--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -52,7 +52,7 @@ The following fields are exported during stock synchronisation:
 *_Note:_* Only items which have been changed within the last 26 hours are exported.
 
 | Order import
-| * as soon as an order was generated on Kaufland
+| * as soon as a new order was generated on Kaufland
 
 | Additional data
 | * export of surcharges for attribute values (item variations)
