Changed data fields for image URLs

--- a/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
@@ -71,16 +71,14 @@ _oder_
 
 * Eigenschaft an Variante
 
-| Bild-URL 1
+| Bild-URLs
 | ja
-| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+| * *Bild » Artikel Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
 *_Erlaubte Dateitypen:_* jpg, gif, bmp, png
 
-| Bild-URL 2-10
-| nein
-| zusätzliche Bilder +
-
-* *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+| Varianten-Bild-URLs
+| ja
+| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
 *_Erlaubte Dateitypen:_* jpg, gif, bmp, png
 
 | Marke
