UPDATE referrer and add to nav

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -146,6 +146,7 @@
 *** xref:auftraege:manually-create-orders.adoc[Aufträge manuell anlegen]
 *** xref:auftraege:design-order-view.adoc[Auftragsansicht gestalten]
 *** xref:auftraege:order-statuses.adoc[Auftragsstatus]
+*** xref:auftraege:auftragsherkunft-neu.adoc[Auftragsherkunft]
 *** xref:auftraege:order-types.adoc[Auftragstypen]
 **** xref:auftraege:order-type-offer.adoc[Angebot]
 **** xref:auftraege:order-type-warranty.adoc[Gewährleistung]
