--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
@@ -48,8 +48,7 @@ Die folgenden Spalten stehen für die Übersicht der Auftragsherkünfte zur Verf
 |Ermöglicht die Auswahl der Herkünfte über eine Checkbox, damit du die vorhandenen <<#gruppenfunktionen-verwenden, Gruppenfunktionen>> ausführen kannst.
 
 | *ID*
-|Zeigt die ID der Herkunft an. Mit Klick auf den Pfeil kannst du die Herkünfte der Tabelle auf- oder absteigend nach ID sortieren. Jede Auftragsherkunft erhält eine eigene ID. Diese wird automatisch vom System zugewiesen und ist nicht änderbar. Für manuelle Herkünfte stehen die IDs im Bereich 9-100 zur Verfügung. Die IDs 1-8 sowie die IDs ab 101 sind von fest im System hinterlegten Auftragsherkünften besetzt. Unterherkünfte sind an dezimalen IDs zu erkennen, zum Beispiel 2.08 für eBay Germany. +
-*_Hinweis:_* Wenn alle freien IDs für manuell angelegte Auftragsherkünfte vergeben sind, ist die Schaltfläche *Neue Herkunft erstellen (material:add[]) nicht mehr sichtbar, da keine neuen Herkünfte hinzugefügt werden können.
+|Zeigt die ID der Herkunft an. Mit Klick auf den Pfeil kannst du die Herkünfte der Tabelle auf- oder absteigend nach ID sortieren. Jede Auftragsherkunft erhält eine eigene ID. Diese wird automatisch vom System zugewiesen und ist nicht änderbar. Für manuelle Herkünfte stehen die IDs im Bereich 9-100 zur Verfügung. Die IDs 1-8 sowie die IDs ab 101 sind von fest im System hinterlegten Auftragsherkünften besetzt. Unterherkünfte sind an dezimalen IDs zu erkennen, zum Beispiel 2.08 für eBay Germany.
 
 | *Name*
 |Zeigt den Namen der Herkunft an. Mit Klick auf den Pfeil kannst du die Herkünfte der Tabelle alphabetisch nach Namen sortieren. Der Name wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann jederzeit geändert werden.
@@ -62,9 +61,6 @@ Die folgenden Spalten stehen für die Übersicht der Auftragsherkünfte zur Verf
 
 | *Sichtbar in Auswahl*
 |Zeigt an, ob die Herkunft in der Auswahl sichtbar ist. Ist die Herkunft aktiviert (material:done[]), wird sie in anderen Menüs angezeigt. Ist die Herkunft deaktiviert, wird sie in anderen Menüs nicht angezeigt.
-
-| *Sichtbar in Leads*
-|Zeigt an, ob die Herkunft in Leads sichtbar ist.
 
 | *Aktionen*
 |Stellt rechts in der Zeile weitere <<#weitere-aktionen, Aktionen>> zur Verfügung.
@@ -168,10 +164,6 @@ Herkunft bearbeiten:
 |Ändere bei Bedarf die Sichtbarkeit in der Auswahl. Ist die Umschaltfläche aktiviert (material:toggle_on[role=skyBlue]), wird die Herkunft in anderen Menüs angezeigt. Ist die Herkunft deaktiviert, wird sie in anderen Menüs nicht angezeigt. +
 *_Tipp:_* Nutze die <<#group-functions, Gruppenfunktion>> *Sichtbarkeit ändern*, um mehrere Herkünfte auf einmal für die Sichtbarkeit in der Auswahl zu aktivieren bzw. zu deaktivieren. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, alle Herkünfte auf einmal dafür zu aktivieren bzw. zu deaktivieren.
 
-| *Sichtbar in Leads*
-|Ändere bei Bedarf die Sichtbarkeit in Leads. +
-*_Tipp:_* Nutze die <<#group-functions, Gruppenfunktion>> *Sichtbarkeit ändern*, um mehrere oder sogar alle Herkünfte auf einmal für die Sichtbarkeit in Leads zu aktivieren bzw. zu deaktivieren. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, alle Herkünfte auf einmal dafür zu aktivieren bzw. zu deaktivieren.
-
 |===
 
 [#webshop-url-kopieren]
@@ -242,9 +234,6 @@ Neue Herkunft erstellen:
 | *Sichtbar in Auswahl*
 |Aktiviere die Umschaltfläche, wenn die Herkunft in der Auswahl sichtbar sein soll. Ist die Umschaltfläche aktiviert (material:toggle_on[role=skyBlue]), wird die Herkunft in anderen Menüs angezeigt. Ist die Herkunft deaktiviert, wird sie in anderen Menüs nicht angezeigt.
 
-| *Sichtbar in Leads*
-|Aktiviere die Umschaltfläche, wenn die Herkunft in Leads sichtbar sein soll.
-
 |===
 
 [#gruppenfunktionen-verwenden]
@@ -260,7 +249,7 @@ Anhand einer Gruppenfunktion kannst du eine bestimmte Aktion für alle gewählte
 
 | *Sichtbarkeit ändern*
 |material:remove_red_eye[]
-|Ändert die Sichtbarkeit aller gewählten Auftragsherkünfte. Hier kannst du die *Sichtbarkeit in der Auswahl* sowie die *Sichtbarkeit in Leads* ändern.
+|Ändert die Sichtbarkeit in der Auswahl für alle gewählten Auftragsherkünfte.
 
 | *Eigner ändern*
 |material:people_alt[]
