Added note about order import

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -67,7 +67,12 @@ Die folgenden Felder werden beim Bestandsabgleich exportiert:
 * Deine Artikel werden bei Kaufland gelistet. Der Name deines Unternehmens wird an deinen Artikeln angezeigt.
 * Kund:innen geben eine Bestellung auf Kaufland auf.
 * Kund:innen zahlen an Kaufland.
-* Der Auftrag wird mit Status *[5] Freigabe Versand* in plentymarkets importiert.
+* Der Auftrag wird sofort, nachdem er auf Kaufland aufgegeben wurden, in plentymarkets importiert.
+
+*_Hinweise zum Auftragsimport bei Kaufland:_*
+
+* Aufträge mit dem Kaufland-Status *OPEN* werden ohne Adressdaten in Status *[1] Unvollständige Daten* in plentymarkets importiert. Hierbei handelt es sich um Aufträge, die nach der Bestellung noch von der Käufer:in storniert werden können. Die Aufträge verbleiben 15 Minuten in diesem Status, damit Kund:innen die Möglichkeit haben, den Auftrag zu stornieren.
+* Wenn der Auftrag bei Kaufland nach 15 Minuten einen anderen Status bekommt, wechselt der Auftragsstatus in plentymarkets automatisch zu Status *[5] Freigabe Versand*. Alle fehlenden Auftragsdaten werden am Auftrag ergänzt.
 
 [#market-setup]
 == Marktplatz in plentymarkets einrichten
