CHANGE pages in preparation for the new item ui as default

--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-artikelkatalog.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-artikelkatalog.adoc
@@ -33,10 +33,9 @@ Im Webshop plentyShop LTS kannst du dich für eine Kategorietiefe von 2 oder von
 [TIP]
 .Kategoriestruktur planen
 ====
-Überlege dir, welche Kategorien und Unterkategorien für deine Produkte sinnvoll sind.
-Wie finden deine Kunden sich am besten im Webshop zurecht?
-Mach dir ein paar Gedanken zum Thema, bevor du deine Kategorien erstellst.
-Eine Baumstruktur zu skizzieren kann dir helfen, deine Produkte sinnvoll zu gruppieren.
+
+include::artikel:page$kategorien.adoc[tag=category-structure-plan]
+
 ====
 
 Gehe wie unten beschrieben vor, um eine Hauptkategorie zu erstellen.
