--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -220,14 +220,13 @@ Falls erforderlich, kannst du hier auch weitere Produktbilder hochladen, Details
 [TIP]
 .Beispiel-Workflow
 ====
-Stell dir vor, du verkaufst ein T-Shirt in den Farben Rot, Grün und Blau.
-Du möchtest, dass Kunden automatisch z.B. ein Bild vom grünen T-Shirt sehen, wenn sie die Farbe Grün in deinem plentyShop auswählen.
+Stell dir vor, du verkaufst ein T-Shirt in den Farben Rot, Schwarz und Blau.
+Du möchtest, dass Kunden automatisch z.B. ein Bild vom schwarzen T-Shirt sehen, wenn sie die Farbe Schwarz in deinem plentyShop auswählen.
 Dazu:
 
-. Lädst du alle Produktbilder hoch (d.h. Bilder der roten, grünen und blauen T-Shirt-Varianten).
-. Speicherst du Details zu den einzelnen Bildern.
+. Lädst du alle Produktbilder hoch (d.h. Bilder der roten, schwarzen und blauen T-Shirt-Varianten).
 . Ordnest du die Bilder den passenden Varianten zu.
-Zum Beispiel ordnest du das Bild des grünen T-Shirts der grünen T-Shirt-Variante zu.
+Zum Beispiel ordnest du das Bild des schwarzen T-Shirts der schwarzen T-Shirt-Variante zu.
 ====
 
 ---
