FIX referrer info

--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
@@ -58,7 +58,7 @@ Die folgenden Spalten stehen für die Übersicht der Auftragsherkünfte zur Verf
 *_Tipp:_* Mit Klick auf den Pfeil im Tabellenheader kannst du die Herkünfte der Tabelle alphabetisch nach Namen sortieren.
 
 | *Interner Name*
-|Zeigt den internen Namen an. Der interne Name ist nicht änderbar und wird nicht im System angezeigt. Nur fest hinterlegte Auftragsherkünfte erhalten einen internen Namen, manuell angelegte Herkünfte nicht.
+|Zeigt den internen Namen der Herkunft an. Der interne Name ist nicht änderbar und wird nicht im System angezeigt. Nur fest hinterlegte Auftragsherkünfte erhalten einen internen Namen, manuell angelegte Herkünfte nicht.
 
 | *Eigner*
 |Zeigt den Eigner der Herkunft an, der für einen Auftrag automatisch als Eigner eingetragen wird. Zur Auswahl stehen die im Menü *Einrichtung » Einstellungen » Benutzer » Konten* xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[berechtigten Personen].
@@ -135,7 +135,7 @@ Verwende Filter, um die Suche nach Herkünften weiter einzugrenzen. Deine gewäh
 
 Rechts in der Spalte einer Auftragsherkunft stehen dir weitere Funktionen zur Verfügung. Dort kannst du <<#herkunft-bearbeiten, Herkünfte bearbeiten>>, <<webshop-url-kopieren, Webshop-URLs kopieren>> und <<herkunft-loeschen, Herkünfte löschen>>. In den folgenden Kapiteln werden diese Funktionen näher beschrieben.
 
-[herkunft-bearbeiten]
+[#herkunft-bearbeiten]
 === Herkunft bearbeiten
 
 Du kannst Herkünfte jederzeit bearbeiten. Gehe dazu wie im Folgenden beschrieben vor.
@@ -162,11 +162,11 @@ Herkunft bearbeiten:
 
 | *Eigner*
 |Wähle bei Bedarf einen anderen Eigner aus der Dropdown-Liste. +
-*_Tipp:_* Nutze die <<#group-functions, Gruppenfunktion>> *Eigner ändern*, um den Eigner für mehrere Herkünfte auf einmal zu ändern. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, den Eigner für alle Herkünfte auf einmal zu ändern.
+*_Tipp:_* Nutze die <<#gruppenfunktionen-verwenden, Gruppenfunktion>> *Eigner ändern*, um den Eigner für mehrere Herkünfte auf einmal zu ändern. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, den Eigner für alle Herkünfte auf einmal zu ändern.
 
 | *Sichtbar in Auswahl*
 |Ändere bei Bedarf die Sichtbarkeit in der Auswahl. Ist die Umschaltfläche aktiviert (material:toggle_on[role=skyBlue]), wird die Herkunft in anderen Menüs angezeigt. Ist die Herkunft deaktiviert, wird sie in anderen Menüs nicht angezeigt. +
-*_Tipp:_* Nutze die <<#group-functions, Gruppenfunktion>> *Sichtbarkeit ändern*, um mehrere Herkünfte auf einmal für die Sichtbarkeit in der Auswahl zu aktivieren bzw. zu deaktivieren. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, alle Herkünfte auf einmal dafür zu aktivieren bzw. zu deaktivieren.
+*_Tipp:_* Nutze die <<#gruppenfunktionen-verwenden, Gruppenfunktion>> *Sichtbarkeit ändern*, um mehrere Herkünfte auf einmal für die Sichtbarkeit in der Auswahl zu aktivieren bzw. zu deaktivieren. Die Option *Alle auswählen* im Tabellenheader ermöglicht es dir außerdem, alle Herkünfte auf einmal dafür zu aktivieren bzw. zu deaktivieren.
 
 |===
 
@@ -189,7 +189,7 @@ Webshop-URL kopieren:
 === Herkunft löschen
 
 Herkünfte, die du selbst erstellt hast, können gelöscht werden. Systemherkünfte sind hingegen nicht löschbar. Um eine Herkunft zu löschen, gehe wie im Folgenden beschrieben vor. +
-*_Tipp:_* Nutze die <<#gruppenfunktionen-verwenden, Gruppenfunktion>> *Löschen* um mehrere Herkünfte auf einmal zu löschen.
+*_Tipp:_* Nutze die <<#gruppenfunktionen-verwenden, Gruppenfunktion>> *Auftragsherkunft löschen*, um mehrere Herkünfte auf einmal zu löschen.
 
 [.instruction]
 Herkunft löschen:
@@ -198,7 +198,7 @@ Herkunft löschen:
 . Führe die Suche (material:search[]) aus, um Herkünfte anzuzeigen.
 . Klicke rechts in der Zeile der Herkunft auf *Löschen* (material:delete[]). +
 *_Hinweis:_* Das Löschen-Symbol kann nur bei löschbaren Herkünften angeklickt werden.
-. Bestätige die Sicherheitsabfrage, indem du auf *Löschen* klickst. +
+. Bestätige die Sicherheitsabfrage, indem du auf *Löschen* (material:delete[role=red]) klickst. +
 → Die Herkunft wird gelöscht.
 
 [#neue-herkunft-erstellen]
