--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -206,7 +206,7 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 |Wähle die Vorlage für den Auftrag aus der Dropdown-Liste.
 
 | *Kontakt*
-|Gib den Kontakt des Auftrags ein. Alle am Kontakt hinterlegten Daten werden automatisch hinzugefügt. +
+|Wähle den Kontakt des Auftrags. Gib mindestens 3 Buschstaben ein, um Vorschläge zu sehen. Alle am Kontakt hinterlegten Daten werden automatisch hinzugefügt. +
 *_Tipp:_* Möchtest du einen Auftrag als Gast anlegen, wähle keinen Kontakt aus und füge stattdessen eine neue *Rechnungsadresse* bzw. eine neue *Lieferadresse* hinzu.
 
 2+^| *Auftragsdetails*
@@ -335,7 +335,7 @@ Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weite
 [#step-two-add-items]
 ==== Schritt 2: Artikel hinzufügen
 
-In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort lediglich die Versandart und die Versandkosten bearbeitet werden können.
+In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
 
 Um einen Auftrag abzuschließen und anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und dann hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
 
@@ -761,7 +761,7 @@ Tabelle individualisieren:
 
 --
 
-Wenn du Änderungen an Versandkosten oder der Versandart vornimmst, werden die Gesamtsummen automatisch neu berechnet. Um den Auftrag fertigzustellen, klicke auf material:save[] *Auftrag anlegen*. Der Auftrag ist nun erstellt und du wirst zur Auftragsübersicht des Kontakts weitergeleitet. Der Auftrag ist in der allgemeinen Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* verfügbar.
+Wenn du Änderungen an den Versandkosten oder der Versandart vornimmst oder Gutscheine hinzufügst, werden die Gesamtsummen automatisch neu berechnet. Um den Auftrag fertigzustellen, klicke auf material:save[] *Auftrag anlegen*. Der Auftrag ist nun erstellt und je nach Einstellung wirst du in die entsprechende Ansicht weitergeleitet. Der Auftrag ist anschließend in der Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* verfügbar.
 
 [#295]
 === Auftragsvorlagen erstellen und anwenden
