--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -74,6 +74,8 @@ The following fields are exported during stock synchronisation:
 * Orders with the Kaufland status *OPEN* are imported into plentymarkets without address details and with the status *[1] Incomplete data*. These are orders that can still be cancelled by the customer. The orders remain in this status for 15 minutes so that customers still have the possibility to cancel the order.
 * When the order status on Kaufland changes after 15 minutes, the order automatically moves to status *[5] Cleared for shipping* in plentymarkets. All missing order data is added to the order.
 
+* <<#kaufland-fbk, Orders that are processed by Kaufland (FbK = Fulfillment by Kaufland)>> are imported into plentymarkets with the order referrer *170.01 Kaufland FBK DE*.
+
 [#market-setup]
 == Setting up the market in plentymarkets
 
@@ -313,6 +315,21 @@ Defining a barcode for Kaufland.de:
 . Activate the referrer *Kaufland.de*.
 . Save (terra:save[]) the settings. +
 *_Tip:_* Is this barcode already linked to your variations? If not, don’t forget <<#save-barcode, to link the barcode to your variations and to save a code>>.
+
+[#kaufland-fbk]
+=== Fulfillment by Kaufland (FbK): Using the FbK service
+
+Kaufland offers the service FbK (= Fulfillment by Kaufland). With this service, Kaufland takes care of the storage and ships your items. If you want to use FbK, get in touch with your contact person at Kaufland. +
+
+Currently, you cannot carry out any settings for FbK in your plentymarkets system. Kaufland FbK orders are only imported into plentymarkets. Items that you want to sell via FbK have to be created in the Kaufland Seller Portal. FbK orders can be retrieved, but not processed in plentymarkets.
+
+Workflow of an FbK order:
+
+* Your items are listed on Kaufland. The name of your company is shown with your items.
+* Customers place an order on Kaufland.
+* Customers make their payments to Kaufland.
+* Kaufland ships the order.
+* FbK orders are imported into plentymarkets with the order referrer *170.01 Kaufland FBK DE*.
 
 [#prepare-variations]
 == Preparing variations
