--- a/docs/de-de/modules/changelog/pages/2022-10-19.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-10-19.adoc
@@ -6,7 +6,7 @@
 :startWeekDate: 13. Oktober 2022
 :endWeekDate: 19. Oktober 2022
 
-// Ab diesem Eintrag weitermachen: LINK EINFÜGEN
+// Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/kaufland-umstellung-des-auftragsimports-switch-to-new-order-import/698388
 
 Erfahre, was sich in der Woche vom {startWeekDate} bis zum {endWeekDate} bei plentymarkets getan hat. Im Folgenden findest du alle Changelog-Einträge der letzten Woche für stable- und early-Systeme.
 
@@ -33,6 +33,14 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 * Wenn du einen Katalog öffnest, wird in der Navigation links unter *Filter* in Klammern angezeigt, wie viele Filter für den Katalog gesetzt sind. Bisher enthielt die angezeigte Zahl auch die Template-Filter, also die Filter, die automatisch gesetzt werden. Ab sofort ist das anders: Jetzt werden die Template-Filter nicht mehr berücksichtigt. Wenn du neben *Filter* also zum Beispiel eine 2 siehst, hast du selbst zwei Filter für diesen Katalog gesetzt.
 
 [discrete]
+==== OTTO
+
+:otto-master-date: 14.10.2022
+:otto-master-link: https://forum.plentymarkets.com/uploads/short-url/lWRuoWFhijv7dYCzICiqhqviEt6.xlsx
+
+include::partial$otto-master-file.adoc[]
+
+[discrete]
 === UI
 
 * Ergebnisse der Eingaben in Filter-Menüs werden allgemein durch sogenannte Chips dargestellt. Das Verhalten dieser Chips wurde vereinheitlicht, sodass die Ergebnisse nach dem Absenden der Filter-Eingaben angezeigt bzw. aktualisiert werden. Beispiele sind zu finden in den Menüs *Einrichtung » Aufträge » Eigenschaftskopie* oder *Artikel » Artikel-UI*.
@@ -50,9 +58,27 @@ Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 * Beim Duplizieren von Aufträgen wurden bei Gutscheinen die internen Referenzen nicht gesetzt. Dadurch konnten die Gutscheine bei Retouren nicht in die Artikelpreise eingerechnet werden. Dies wurde behoben.
 
 [discrete]
+=== CRM
+
+* Das Problem mit den fehlenden Messenger-Berechtigungen für Backend-Benutzer:innen wurde behoben. Die folgenden Berechtigungen sind nötig, damit Backend-Benutzer:innen mit dem Messenger arbeiten können:
+** CRM > Nachricht > Anzeigen
+** CRM > Nachricht > Erstellen
+** CRM > Messenger > Bearbeiten
+** Kommentare > Anzeigen
+** Kommentare > Erstellen
+** Einrichtung > Tag > Anzeigen
+** Einrichtung > Tag > Erstellen
+** Der Filter für den Mandanten im Menü *Einrichtung » CRM » Newsletter » plentymarkets » E-Mail-Filter* im Bereich Kundenfilter hat nicht korrekt funktioniert. Somit konnten weder die E-Mail-Adressen von Newsletter-Abonnenten in einen anderen Ordner übertragen werden noch hat die Vorschau korrekt funktioniert. Dieses Verhalten wurde behoben.
+
+[discrete]
 === Payment
 
 * Bei der Auswahl von Filtern im Menü Zahlungsverkehr ließ sich das Fenster nicht bis zum Suchen-Button nach unten scrollen, so dass die Filter nicht gesetzt werden konnten. Dieser Fehler ist nun behoben.
+
+[discrete]
+=== Plugins
+
+* Um Änderungen aus plentyDevTool und bei OpenSource-Plugins erfolgreich zu pushen war es nötig die Versionsnummer in der plugin.json anzuheben. Dieses Verhalten ist nun behoben. Eine Erhöhung der Versionsnummer ist nicht mehr nötig.
 
 --
 
@@ -67,7 +93,20 @@ early::
 
 Folgende Neuerungen wurden in den letzten 7 Tagen auf *{version}* veröffentlicht.
 
+[discrete]
+=== CRM
 
+* Im Assistenten *E-Mail-Konten* im Menü *Einrichtung » Assistenten » Grundeinrichtung* wurde im Schritt *Signatur* ein weiteres Textfeld hinzugefügt, in dem du die Signatur im reinen Textformat speichern kannst.
+
+[discrete]
+=== Ereignisaktionen
+
+* In den Ereignisaktionen gibt es nun das neue Ereignis *Auftragsadresse geändert*, das ausgelöst wird, wenn der Inhalt einer Auftragsadresse geändert oder eine andere Adresse zugewiesen wird. Dabei kannst du einstellen, auf welchen Adresstyp im Ereignis reagiert werden soll: Rechnungs-, Lieferadresse oder beide Adressen.
+
+[discrete]
+=== Prozesse
+
+* In der Aktion *Artikelerfassung* gibt es nun eine neue Option, mit der du einstellen kannst, ob in der Detailansicht die Rechnungs- oder Lieferadresse eines Auftrags angezeigt werden soll.
 
 '''
 
@@ -85,7 +124,10 @@ Folgende Änderungen wurden in den letzten 7 Tagen auf *{version}* veröffentlic
 
 Folgende Probleme wurden in den letzten 7 Tagen auf *{version}* behoben.
 
+[discrete]
+=== CRM
 
+* Wie im Changelog vom 6. Juli 2022 beschrieben, wurde die Reihenfolge der Anzeige im Suchfeld der Kontakte-UI angepasst (erst Name, dann ID). Aufgrund einer Änderung an der Komponente wurde die geänderte Reihenfolge wieder rückgängig gemacht. Dieses Verhalten wurde nun behoben: Die Reihenfolge im Suchfeld der Kontakte-UI zeigt nun wieder an erster Stelle den Namen und dann die ID.
 
 --
 
@@ -99,9 +141,29 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |===
 |Plugin-Name |Version |To-do
 
-|
-|
-|
+|link:https://marketplace.plentymarkets.com/byrd_55216[byrd fulfillment^]
+|1.0.7
+|-
+
+|link:https://marketplace.plentymarkets.com/dhlretoureonline_6714[DHL Retoure Online^]
+|1.1.8
+|-
+
+|link:https://marketplace.plentymarkets.com/elasticexport_4763[Elastischer Export^]
+|1.7.1
+|-
+
+|link:https://marketplace.plentymarkets.com/galaxus_4788[Galaxus.ch^]
+|1.13.3
+|-
+
+|link:https://marketplace.plentymarkets.com/limango_7023[limango^]
+|1.4.19
+|-
+
+|link:https://marketplace.plentymarkets.com/mytoys_54776[myToys^]
+|1.0.50
+|-
 
 |===
 
