--- a/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
+++ b/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
@@ -37,10 +37,11 @@ Damit Benutzer:innen vom Typ *Backend* Aufträge öffnen können, müssen hier S
 Backend-Benutzer:innen müssen außerdem zur Bearbeitung von Aufträgen xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[berechtigt werden].
 Zudem müssen Backend-Benutzer:innen Aufträge der Typen *Retoure*, *Gewährleistung* und *Reparatur* anlegen können. Dafür müssen sie für die im Menü *Einrichtung » Aufträge » Einstellungen* hinterlegten Standardstatus dieser drei Auftragstypen berechtigt sein. +
 Lege außerdem fest, welche Benutzer:innen was im System sehen dürfen. Lege dafür die xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#100[Sichtbarkeiten] fest, z.B. für Lager und Auftragsstatus. +
-Um mit Aufträgen und den damit verknüpften Bereichen arbeiten zu können, sind für Backend-Benutzer:innen verschiedene Rechte notwendig. In den folgenden Kapiteln werden die Rechte für alle relevanten Bereiche aufgeführt. Entscheide hier selbst, welche Rechte für Backend-Benutzer:innen vergeben werden sollen.
+Um mit Aufträgen und den damit verknüpften Bereichen arbeiten zu können, sind für Backend-Benutzer:innen verschiedene Rechte notwendig. Im folgenden Abschnitt werden die Rechte für alle relevanten Bereiche aufgeführt. Entscheide hier selbst, welche Rechte für Backend-Benutzer:innen vergeben werden sollen.
 
-[#rechte-kontaktdaten]
-=== Rechte für Kontaktdaten für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für Kontaktdaten für Backend-Benutzer:innen vergeben
+--
 
 :rights-purpose: mit Kontaktdaten arbeiten können
 :right-one: pass:quotes[*CRM > Adresse > Anzeigen*]
@@ -52,6 +53,7 @@ Um mit Aufträgen und den damit verknüpften Bereichen arbeiten zu können, sind
 :right-seven: pass:quotes[*CRM > Kontakt > Anzeigen*]
 
 include::_includes:partial$rights.adoc[]
+--
 
 [#rechte-artikeldaten]
 === Rechte für Artikeldaten für Backend-Benutzer:innen vergeben
