--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
@@ -3,6 +3,8 @@
 :keywords: Auftragsherkunft, Auftragsherkünfte, Herkunft, Herkünfte, Referrer, Herkunft aktivieren, Auftragsherkunft aktivieren, Unterherkunft, Unterherkünfte, Herkunfts-ID, Referrer-ID, Auftragsherkunft löschen, Herkunft löschen
 :author: team-order-core
 
+// Werden Benutzerrechte benötigt?
+
 Omni-Channel-Verkauf mit plentymarkets bedeutet, dass du deine Artikel über eine Vielzahl von Kanälen anbieten und so Aufträge aus den verschiedensten Quellen generieren kannst.
 Einige Auftragsherkünfte sind im System vorab angelegt und können nicht geändert werden. Andere Herkünfte werden automatisch hinzugefügt, zum Beispiel durch das Einbinden eines Plugins oder xref:pos:pos.adoc#[plentyPOS].
 Plugin-Herkünfte können nicht gelöscht werden. Du kannst Herkünfte aber auch manuell hinzufügen.
@@ -10,7 +12,7 @@ Plugin-Herkünfte können nicht gelöscht werden. Du kannst Herkünfte aber auch
 Jede Herkunft erhält eine eigene ID. Manche Herkünfte haben Unterherkünfte, bei denen die IDs dann Dezimalstellen haben. Die Marktplätze *Amazon* und *eBay* sowie plentyPOS haben je eine allgemeine Herkunft und Unterherkünfte.
 Bei eBay oder Amazon hat jede Länderplattform eine eigene Unterherkunft, ebenso wie jede plentyPOS-Kasse.
 
-Unabhängig von der Herkunft sind alle Aufträge im Menü *Aufträge » Aufträge bearbeiten* aufgelistet und bearbeitbar. Dort ist die Herkunft an jedem Auftrag hinterlegt. In der zum Auftrag gehörenden Zeile wird die ID der Herkunft angezeigt. Zudem ist die Herkunft im Tab *Einstellungen* eines Auftrags erkennbar.
+Unabhängig von der Herkunft sind alle Aufträge im Menü *Aufträge » Aufträge (Testphase)* aufgelistet und bearbeitbar. Dort ist die Herkunft an jedem Auftrag hinterlegt. In der zum Auftrag gehörenden Zeile wird die ID der Herkunft angezeigt. Zudem ist die Herkunft im Bereich *Allgemein* eines Auftrags erkennbar.
 Diese Herkunft kann geändert werden, allerdings nur bei manuell angelegten Herkünften und auch nur solange noch keine Rechnung erzeugt wurde.
 
 [#spalten-konfigurieren]
@@ -131,7 +133,7 @@ Verwende Filter, um die Suche nach Herkünften weiter einzugrenzen. Deine gewäh
 [#weitere-aktionen]
 == Weitere Aktionen durchführen
 
-Rechts in der Spalte einer Auftragsherkunft stehen dir weitere Funktionen zur Verfügung. Dort kannst du <<#herkunft-bearbeiten, Herkünfte bearbeiten>>, <<#webshop-url-kopieren, Webshop-URLs kopieren>> und <<#herkunft-loeschen, Herkünfte löschen>>. In den folgenden Kapiteln werden diese Funktionen näher beschrieben.
+Rechts in der Spalte einer Auftragsherkunft stehen dir weitere Funktionen zur Verfügung. Dort kannst du <<#herkunft-bearbeiten, Herkünfte bearbeiten>>, <<webshop-url-kopieren, Webshop-URLs kopieren>> und <<herkunft-loeschen, Herkünfte löschen>>. In den folgenden Kapiteln werden diese Funktionen näher beschrieben.
 
 [#herkunft-bearbeiten]
 === Herkunft bearbeiten
@@ -272,8 +274,8 @@ Die Auftragsherkunft ist auch Voraussetzung für die Kooperation mit Affiliate-P
 [#analyse-orders]
 == Aufträge nach Auftragsherkunft filtern und auswerten
 
-Die Auftragssuche im Menü *Aufträge » Aufträge bearbeiten* bietet viele Filter, um deine Suche einzugrenzen. Der Filter *Herkunft* sucht Aufträge nach der Auftragsherkunft (zum Beispiel gefiltert nach Mandant (Shop), Amazon, eBay etc.). Für Amazon und eBay gibt es sowohl allgemeine Herkünfte als auch eine Unterherkunft für jede Länderplattform.
+Die Auftragssuche im Menü *Aufträge » Aufträge (Testphase)* bietet viele Filter, um deine Suche einzugrenzen. Der Filter *Herkunft* sucht Aufträge nach der Auftragsherkunft (zum Beispiel gefiltert nach Mandant (Shop), Amazon, eBay etc.). Für Amazon und eBay gibt es sowohl allgemeine Herkünfte als auch eine Unterherkunft für jede Länderplattform.
 
 Bei monatlichen Auswertungen ist es sinnvoll, Suchfilter zu kombinieren und einen zusätzlichen Datumsfilter, zum Beispiel das Datum des Auftragseingangs, zu wählen und einen genauen Zeitraum festzulegen.
 
-Die Herkunftsangabe ist für die Erfolgskontrolle in deinem Webshop wichtig. Nur über diese Einstellung kannst du nachvollziehen, welche Plattformen für dein Warenangebot profitabel sind. Neben der Suchfunktion im Menü *Aufträge » Aufträge bearbeiten* stehen dir im Bereich xref:business-entscheidungen:plenty-bi.adoc#[plentyBI] weitere Auswertungsmöglichkeiten zur Verfügung. Dort kannst du über die Herkunftsangabe die Umsätze der Auftragsherkünfte sehen. So entscheidest du fundiert, wie du dein Werbebudget künftig immer gezielter und effizienter einsetzt.
+Die Herkunftsangabe ist für die Erfolgskontrolle in deinem Webshop wichtig. Nur über diese Einstellung kannst du nachvollziehen, welche Plattformen für dein Warenangebot profitabel sind. Neben der Suchfunktion im Menü *Aufträge » Aufträge (Testphase)* stehen dir im Bereich xref:business-entscheidungen:plenty-bi.adoc#[plentyBI] weitere Auswertungsmöglichkeiten zur Verfügung. Dort kannst du über die Herkunftsangabe die Umsätze der Auftragsherkünfte sehen. So entscheidest du fundiert, wie du dein Werbebudget künftig immer gezielter und effizienter einsetzt.
