--- a/docs/de-de/modules/artikel/pages/eigenschaften.adoc
+++ b/docs/de-de/modules/artikel/pages/eigenschaften.adoc
@@ -9,7 +9,7 @@
 //image::artikel:thumbnail-eigenschaften-manuell.png[]
 
 ////
-zuletzt bearbeitet 08.06.2022
+zuletzt bearbeitet 19.10.2022
 ////
 
 Manche Artikel stechen aus der Masse heraus. Sei es eine Uhr, die wasserdicht ist, oder ein Lautsprecher, der mit Bluetooth ausgestattet ist.
@@ -153,6 +153,8 @@ include::_includes:page$neue-eigenschaften-erstellen-sichtbarkeiten.adoc[tag=ite
 [#property-options]
 ==== Optionen
 
+//ToDo - wenn die neue Artikel-UI standard ist, dann muss die Erklärung zur Option "Steuersatz von Variante" in die include-Datei ausgetauscht werden (ist schon auskommentiert vorbereitet)
+
 include::_includes:page$neue-eigenschaften-erstellen-optionen.adoc[tag=item]
 
 [#1200]
@@ -190,6 +192,25 @@ include::_includes:page$neue-gruppe-erstellen.adoc[]
 
 [#1400]
 === Eigenschaften mit Varianten verknüpfen
+
+In diesem Schritt legst du fest, welche Eigenschaften für welche Varianten gelten.
+Hast du zum Beispiel eine Eigenschaft namens "Bluetooth" erstellt, dann gibst du jetzt an, welche Varianten Bluetooth-fähig sind.
+
+////
+
+//ToDo - sobald die neue Artikel-UI standard ist, dann diese Info sichtbar schalten und dafür den Rest vom Kapitel löschen
+//ToDo - sobald die neue Artikel-UI standard ist, auch die Frage aus dem FAQ löschen "ich finde meine Eigenschaft nicht im Artikeldatensatz"
+
+include::page$verzeichnis.adoc[tag=link-properties-instructions]
+
+[TIP]
+.Vererbungsverhalten
+======
+Es werden entweder alle oder keine der Eigenschaften vererbt. Du kannst nicht wählen, welche Eigenschaften vererbt werden sollen.
+Beispiel: Die Hauptvariante hat vier Eigenschaften. Wenn du die Vererbung deaktivierst, wird sie für alle vier Eigenschaften deaktiviert.
+======
+
+////
 
 [#1410]
 ==== Wo verknüpfen?
@@ -468,6 +489,8 @@ Im Gegensatz zu xref:artikel:attribute.adoc#[Attributen] sind die Eigenschaften 
 .*Ich finde meine Eigenschaft nicht im Artikeldatensatz. Wo ist sie?*
 --
 
+//ToDo - sobald die neue Artikel-UI Standard ist, dann diese Frage löschen - vorher schauen, wo überall den include-Tag eingebunden wurde
+
 //tag::faq-where-link-properties[]
 
 Eigenschaften werden je nach Typ in einem anderen Tab verknüpft.
@@ -652,6 +675,8 @@ include::partial$merkmal-erstellen.adoc[]
 
 [#350]
 === Merkmale mit Artikeln verknüpfen
+
+//ToDo - Sobald die neue Artikel-UI Standard ist, dann den auskommentierten Teil der include-Datei sichtbar machen
 
 include::partial$merkmal-mit-artikel-verknuepfen.adoc[]
 
