--- a/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
+++ b/docs/de-de/modules/auftraege/pages/preparatory-settings.adoc
@@ -39,86 +39,111 @@ Zudem müssen Backend-Benutzer:innen Aufträge der Typen *Retoure*, *Gewährleis
 Lege außerdem fest, welche Benutzer:innen was im System sehen dürfen. Lege dafür die xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#100[Sichtbarkeiten] fest, z.B. für Lager und Auftragsstatus. +
 Um mit Aufträgen und den damit verknüpften Bereichen arbeiten zu können, sind für Backend-Benutzer:innen verschiedene Rechte notwendig. Im folgenden Abschnitt werden die Rechte für alle relevanten Bereiche aufgeführt. Entscheide hier selbst, welche Rechte für Backend-Benutzer:innen vergeben werden sollen.
 
+[discrete]
+=== Rechte vergeben
+
+Beachte, dass nur *Admins* Rechte vergeben können.
+
+[.instruction]
+Rechte vergeben:
+
+. Öffne das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*. +
+→ Die Benutzerkonten werden in einer Übersicht angezeigt.
+. Klicke auf ein Benutzerkonto. +
+→ Der Menüpunkt *Rechte* mit den Sichtbarkeiten wird geöffnet.
+. Vergib die Rechte für den jeweiligen Bereich durch Anklicken der Checkboxen, die oben angegeben sind. +
+*_Hinweis_*: Du kannst entweder Rechte für einen kompletten Bereich vergeben oder dem Konto nur eingeschränkt Rechte gewähren. Klappe für diese Option den Bereich auf.
+. *Speichere* (icon:save[role="green"]) die Einstellungen.
+
+[TIP]
+======
+Die Bereiche *Berechtigungen* und *Menü-Sichtbarkeiten* sind verknüpft. Wenn du also Rechte in einem der beiden Bereiche aktivierst, sind sie automatisch auch für den anderen Bereich aktiv.
+======
+
 [.collapseBox]
 .Rechte für Kontaktdaten für Backend-Benutzer:innen vergeben
 --
 
-:rights-purpose: mit Kontaktdaten arbeiten können
-:right-one: pass:quotes[*CRM > Adresse > Anzeigen*]
-:right-two: pass:quotes[*CRM > Adresse > Löschen*]
-:right-three: pass:quotes[*CRM > Bankdaten > Aktualisieren*]
-:right-four: pass:quotes[*CRM > Bankdaten > Anzeigen*]
-:right-five: pass:quotes[*CRM > Bankdaten > Bearbeiten*]
-:right-six: pass:quotes[*CRM > Bankdaten > Erstellen*]
-:right-seven: pass:quotes[*CRM > Kontakt > Anzeigen*]
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* mit Kontaktdaten arbeiten können, benötigen sie mindestens die folgenden Rechte: +
 
-include::_includes:partial$rights.adoc[]
+* *CRM > Adresse > Anzeigen*
+* *CRM > Adresse > Löschen*
+* *CRM > Bankdaten > Aktualisieren*
+* *CRM > Bankdaten > Anzeigen*
+* *CRM > Bankdaten > Bearbeiten*
+* *CRM > Bankdaten > Erstellen*
+* *CRM > Kontakt > Anzeigen*
 --
 
-[#rechte-artikeldaten]
-=== Rechte für Artikeldaten für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für Artikeldaten für Backend-Benutzer:innen vergeben
+--
 
-:rights-purpose: Artikeldaten sehen können
-:right-one: pass:quotes[*Artikel > Artikel > Anzeigen*]
-:right-two: pass:quotes[*Artikel > Artikel > Artikelbild > Anzeigen*]
-:right-three: pass:quotes[*Artikel > Artikel > Artikelbild > Artikelbildname > Anzeigen*]
-:right-four: pass:quotes[*Artikel > Artikel > Variante > Anzeigen*]
-:right-five: pass:quotes[*Artikel > Hersteller > Anzeigen*]
-:right-six: pass:quotes[*Artikel > Verkaufspreis > Anzeigen*]
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* Artikeldaten sehen können, benötigen sie mindestens die folgenden Rechte: +
 
-include::_includes:partial$rights.adoc[]
+* *Artikel > Artikel > Anzeigen*
+* *Artikel > Artikel > Artikelbild > Anzeigen*
+* *Artikel > Artikel > Artikelbild > Artikelbildname > Anzeigen*
+* *Artikel > Artikel > Variante > Anzeigen*
+* *Artikel > Hersteller > Anzeigen*
+* *Artikel > Verkaufspreis > Anzeigen*
+--
 
-[#rechte-zugangsdaten-maerkte]
-=== Rechte für Märkte für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für Märkte für Backend-Benutzer:innen vergeben
+--
 
-:rights-purpose: Zugangsdaten zu Märkten sehen können
-:right-one: pass:quotes[*Märkte > Zugangsdaten > Anzeigen*]
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* Zugangsdaten zu Märkten sehen können, benötigen sie mindestens das folgende Recht: +
 
-include::_includes:partial$rights.adoc[]
+* *Märkte > Zugangsdaten > Anzeigen*
+--
 
-[#rechte-zugangsdaten-maerkte]
-=== Rechte für Aufträge und Auftragsdokumente für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für Aufträge und Auftragsdokumente für Backend-Benutzer:innen vergeben
+--
 
-:rights-purpose: mit Aufträgen und Auftragsdokumenten arbeiten können
-:right-one: pass:quotes[*Aufträge > Anzeigen*]
-:right-two: pass:quotes[*Aufträge > Aktualisieren*]
-:right-three: pass:quotes[*Aufträge > Erstellen*]
-:right-four: pass:quotes[*Aufträge > Löschen*]
-:right-five: pass:quotes[*Aufträge > Auftragseigenschaften > Anzeigen*]
-:right-six: pass:quotes[*Aufträge > Dokumente > Anlegen*]
-:right-seven: pass:quotes[*Aufträge > Dokumente > Anzeigen*]
-:right-eight: pass:quotes[*Aufträge > Dokumente > Löschen*]
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* mit Aufträgen und Auftragsdokumenten arbeiten können, benötigen sie mindestens die folgenden Rechte: +
 
-include::_includes:partial$rights.adoc[]
+* *Aufträge > Anzeigen*
+* *Aufträge > Aktualisieren*
+* *Aufträge > Erstellen*
+* *Aufträge > Löschen*
+* *Aufträge > Auftragseigenschaften > Anzeigen*
+* *Aufträge > Dokumente > Anlegen*
+* *Aufträge > Dokumente > Anzeigen*
+* *Aufträge > Dokumente > Löschen*
+--
 
-[#rechte-warenausgang]
-=== Rechte für den Warenausgang für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für den Warenausgang für Backend-Benutzer:innen vergeben
+--
 
-:rights-purpose: Aktionen für den Warenausgang durchführen können
-:right-one: pass:quotes[*Aufträge > Warenausgang buchen*]
-:right-two: pass:quotes[*Aufträge > Warenausgang der Auftragsposition zurücksetzen*]
-:right-three: pass:quotes[*Aufträge > Warenausgang zurücksetzen*]
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* Aktionen für den Warenausgang durchführen können, benötigen sie mindestens die folgenden Rechte: +
 
-include::_includes:partial$rights.adoc[]
+* *Aufträge > Warenausgang buchen*
+* *Aufträge > Warenausgang der Auftragsposition zurücksetzen*
+* *Aufträge > Warenausgang zurücksetzen*
+--
 
-[#rechte-eigenschaften-und-tags]
-=== Rechte für Eigenschaften und Tags für Backend-Benutzer:innen vergeben
+[.collapseBox]
+.Rechte für Eigenschaften und Tags für Backend-Benutzer:innen vergeben
+--
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* mit Eigenschaften und Tags arbeiten können, benötigen sie mindestens die folgenden Rechte: +
 
-:rights-purpose: mit Eigenschaften und Tags arbeiten können
-:right-one: pass:quotes[*Einrichtung > Eigenschaft > Anzeigen*]
-:right-two: pass:quotes[*Einrichtung > Tag > Anzeigen*]
-:right-three: pass:quotes[*Einrichtung > Tag > Tag-Verknüpfung > Erstellen*]
-:right-four: pass:quotes[*Einrichtung > Tag > Tag-Verknüpfung > Löschen*]
+* *Einrichtung > Eigenschaft > Anzeigen*
+* *Einrichtung > Tag > Anzeigen*
+* *Einrichtung > Tag > Tag-Verknüpfung > Erstellen*
+* *Einrichtung > Tag > Tag-Verknüpfung > Löschen*
+--
 
-include::_includes:partial$rights.adoc[]
+[.collapseBox]
+.Rechte für Benutzerdaten für Backend-Benutzer:innen vergeben
+--
 
-[#rechte-benutzerdaten]
-=== Rechte für Benutzerdaten für Backend-Benutzer:innen vergeben
+Personen mit *Backend*-Zugriffsrechten können xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#105[nur bestimmte Bereiche und Menüs] in plentymarkets sehen. Sie können also nur eingeschränkt im System arbeiten. Sollen Mitarbeiter:innen mit dem Zugang *Backend* Benutzerdaten konfigurieren können, benötigen sie mindestens das folgende Recht: +
 
-:rights-purpose: Benutzerdaten konfigurieren können
-:right-one: pass:quotes[*Benutzer > Konfigurieren*]
-
-include::_includes:partial$rights.adoc[]
+* *Benutzer > Konfigurieren*
+--
 
 [#basic-settings]
 == Grundeinstellungen vornehmen
