Corrected recommended mapping

--- a/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-furniture-recommended-mappings.adoc
@@ -69,12 +69,12 @@ _oder_
 
 | Bild-URLs
 | ja
-| * *Bild » Artikel Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+| * *Bild » Artikel Bilder » Bilderliste*, Bildinformation *Vollbild-URL* +
 *_Erlaubte Dateitypen:_* jpg, gif, bmp, png
 
 | Varianten-Bild-URLs
 | ja
-| * *Bild » Varianten Bilder » Einzelbild*, Bildinformation *Vollbild-URL* +
+| * *Bild » Varianten Bilder » Bilderliste*, Bildinformation *Vollbild-URL* +
 *_Erlaubte Dateitypen:_* jpg, gif, bmp, png
 
 | Marke
