ADD menu path where the ids can be found

--- a/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
@@ -2971,10 +2971,10 @@ Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:import-exp
 [#1870]
 ==== Löschen (IDs, kommasepariert)
 
-Möchtest du einige ASINs oder ePIDs von einer Variante entfernen?
-Gib die IDs der zu entfernenden ASINs oder ePIDs in die CSV-Datei ein.
+Möchtest du einige ASINs, ePIDs oder MOINs von einer Variante entfernen?
+Gib die IDs der zu entfernenden ASINs, ePIDs oder MOINs in die CSV-Datei ein.
 Verwende Kommas, um die IDs zu trennen.
-//gibt es ein Menü, wo man die ASIN bzw ePID-IDs findet?
+Die IDs findest du im Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: ASIN/ePID/MOIN*.
 
 *_Standardwert_*: Kein Standardwert
 
