--- a/docs/en-gb/modules/data/pages/elasticSync-item.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-item.adoc
@@ -2971,10 +2971,10 @@ You can find the result of the import in the back end menu: xref:item:managing-i
 [#1870]
 ==== Delete (IDs, comma-separated)
 
-Do you want to remove some of the ASINs or ePIDs from a variation?
-Enter the IDs of the ASINs or ePIDs that should be removed in the CSV file.
+Do you want to remove some of the ASINs, ePIDs or MOINs from a variation?
+Enter the IDs of the ASINs, ePIDs or MOINs that should be removed in the CSV file.
 Use commas to separate the IDs.
-//gibt es ein Menü, wo man die ASIN bzw ePID-IDs findet?
+You can find the IDs in the menu *Item » Item UI » [Open variation] » Element: ASIN/ePID/MOIN*.
 
 *_Default value_*: No default value
 
