--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -91,24 +91,37 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 
 [[table-context-menu-functions]]
 .Weitere Funktionen für Aufträge
-[cols="1,3"]
+[cols="2,1,6a"]
 |===
 
-|Einstellung |Erläuterung
+|Einstellung |Symbol |Erläuterung
 
 | *Dokument erstellen*
+|material:add[]
 |Ermöglicht das Erstellen von Dokumenten. Je nach Auftragstyp sind verschiedene Dokumente verfügbar.
 
+| *Status ändern*
+|material:repeat_one[]
+|Ermöglicht das Ändern des Status für einen Auftrag. Wähle einen anderen Status aus der Dropdown-Liste.
+
 | *Warenausgang buchen*
-|Bucht den Warenausgang.
+|material:output[]
+|Bucht den Warenausgang. Das aktuelle Datum sowie die Uhrzeit der Buchung wird angezeigt. Wähle bei Bedarf ein anderes Buchungsdatum oder eine andere Uhrzeit über den Kalender (material:today[]).
 
 | *Referenzierte Bestellungen anzeigen*
-|Zeigt die verknüpften Bestellungen an.
+|material:account_tree[]
+|Zeigt die Auftragsreferenzen an. Konfiguriere (material:settings[]) die Spalten der Tabelle bei Bedarf.
 
 | *Zahlung buchen*
-|Ermöglicht das Buchen einer Zahlung.
+|material:payment[]
+|Ermöglicht das Buchen einer Zahlung. Gib die Daten der Zahlung ein, die du buchen möchtest.
+
+| *Warenbestand ermitteln*
+|material:warehouse[]
+|Zeigt den Warenbestand sowie eventuelle Nachbestellungen eines Auftrags an. Klappe die Zeilen aus (material:chevron_right[]), um weitere Informationen zum Warenbestand des Lagers zu sehen.
 
 | *Auftrag löschen*
+|material:delete[]
 |Ermöglicht das Löschen eines Auftrags. Beachte, dass Aufträge unter Umständen nicht gelöscht werden können.
 
 |===
@@ -433,7 +446,7 @@ Andere Adresse zuweisen:
 [#area-messenger]
 === Bereich: Messenger
 
-Im Bereich *Messenger* siehst du alle zum Auftrag gehörigen Nachrichten. Du kannst Nachrichten <<#nachricht-fluestern, flüstern>>, sodass sie nur intern sichtbar sind und _nicht_ für deine Kund:innen. Du kannst Nachrichten <<#nachricht-senden, senden>> und du kannst <<#nachricht-minuten-erfassen, Minuten für die Nachricht erfassen>> und diese Minuten als Freiminuten oder bezahlte Minuten speichern. 
+Im Bereich *Messenger* siehst du alle zum Auftrag gehörigen Nachrichten. Du kannst Nachrichten <<#nachricht-fluestern, flüstern>>, sodass sie nur intern sichtbar sind und _nicht_ für deine Kund:innen. Du kannst Nachrichten <<#nachricht-senden, senden>> und du kannst <<#nachricht-minuten-erfassen, Minuten für die Nachricht erfassen>> und diese Minuten als Freiminuten oder bezahlte Minuten speichern.
 
 Mit einem Klick auf die bereits erstellte Nachricht wird die Konversation im Messenger geöffnet. Dort kannst du weitere Einstellungen vornehmen. Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
 
@@ -458,7 +471,7 @@ Nachricht flüstern:
 . Gib den Text ins Textfeld ein. +
 → Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
 . Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
-. Klicke auf material:visibility_off[] *FLÜSTERN*, um die Nachricht zu flüstern. 
+. Klicke auf material:visibility_off[] *FLÜSTERN*, um die Nachricht zu flüstern.
 
 [#nachricht-senden]
 ==== Nachricht senden
@@ -482,8 +495,8 @@ Nachricht senden:
 → Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
 . Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
 . Klicke auf material:visibility_off[] *Flüster-Modus*, um den Flüster-Modus auszuschalten. +
-*_Hinweis:_* Die Schaltfläche ändert sich von material:visibility_off[] *FLÜSTERN* in material:forward_to_inbox[role=skyBlue] *SENDEN*. 
-. Klicke auf material:forward_to_inbox[role=skyBlue] *SENDEN*, um die Nachricht zu senden. 
+*_Hinweis:_* Die Schaltfläche ändert sich von material:visibility_off[] *FLÜSTERN* in material:forward_to_inbox[role=skyBlue] *SENDEN*.
+. Klicke auf material:forward_to_inbox[role=skyBlue] *SENDEN*, um die Nachricht zu senden.
 
 [#nachricht-minuten-erfassen]
 ==== Minuten für die Nachricht erfassen
@@ -509,12 +522,12 @@ Minuten für die Nachricht erfassen:
 → Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
 . Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
 . Klicke auf material:more_vert[] und aktiviere (material:toggle_on[role=skyBlue]) dann die Option *Minuten erfassen*. +
-*_Hinweis:_* Die Schaltfläche ändert sich in material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*. 
+*_Hinweis:_* Die Schaltfläche ändert sich in material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*.
 . Klicke auf material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*, um die Minuten für die Nachricht zu erfassen. +
 → Das Fenster *Minuten erfassen* wird geöffnet.
 . Passe ggf. die Minuten an.
 . Wähle (material:radio_button_checked[role=skyBlue]), ob es sich um *Freiminuten* oder *Bezahlte Minuten* handelt.
-. Weise der Nachricht ggf. Tags zu. 
+. Weise der Nachricht ggf. Tags zu.
 . Klicke auf *ERFASSEN UND SPEICHERN*.
 
 [#area-order-items]
