Update Check24 Furniture

--- a/docs/en-gb/modules/markets/partials/check24-furniture-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-furniture-recommended-mappings.adoc
@@ -69,13 +69,11 @@ _or_
 
 | Image URLs
 | yes
-| * *Image » Item images » Image list*, Image information *Full image URL* +
-*_allowed file types:_* jpg, gif, bmp, png
+| * *Image » Item images » Image list*, Image information *Full image URL*
 
 | Variation image URLs
 | yes
-| * *Image » Variation images » Image list*, Image information *Full image URL* +
-*_allowed file types:_* jpg, gif, bmp, png
+| * *Image » Variation images » Image list*, Image information *Full image URL*
 
 | Brand
 | no
