Update icons package content list

--- a/docs/en-gb/modules/fulfilment/pages/package-content-list-test-phase.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/package-content-list-test-phase.adoc
@@ -470,7 +470,7 @@ Editing items:
 . In the *ID* column, click on the Variation ID that you want to open. +
 → The variation’s settings in the *Item » Edit item* menu open.
 . Make any necessary corrections.
-. Save (icon:save[set=plenty, role="green"]) the settings.
+. Save (material:save[]) the settings.
 
 
 [#add-package-to-pallet]
